k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
  namespace: website
spec:
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 80
