k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ing
  namespace: website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.berrouyne.space
      secretName: website-tls
  rules:
    - host: app.berrouyne.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-svc
                port:
                  number: 80
